Smoothing the details.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </section>
             <section id="flags">
               <ul>
-                <li><button onclick="languageChangeHU()"><img src="assets/Hun32.png"></button></li>
-                <li><button onclick="languageChangeEN()"><img src="assets/UK32.png"></button></li>
+                <li><button onclick="languageChangeHU()"><img src="assets/Hun32.png" alt="Hungarian Flag"></button></li>
+                <li><button onclick="languageChangeEN()"><img src="assets/UK32.png" alt="United Kingdom Flag"></button></li>
               </ul>
             </section>
             <script src="name.js"></script>
