--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li id="linkedin"></li>
                 <li id="facebook"></li>
                 <li id="email"></li>
+                <li id="mobile"></li>
               </ul>
             </section>
             <section id="flags">
